#20 - fixed button alignment

--- a/src/styles/Main.sass
+++ b/src/styles/Main.sass
@@ -78,19 +78,14 @@
   --dnd5e-border-dotted: 1px dotted #bbb
 
   button
+    width: fit-content
+    line-height: 0.7rem
     &.stealth
-      display: inline-flex
       border: none
       background: none
-      flex: none
-      // box-shadow: none
-      // width: 0
-      // margin: 0
-      // padding: 0
-      box-sizing: content-box
-      i
-        display: inline-block
-        margin: auto
+      margin: auto
+    &.wide
+      width: 100%
 
   .item-sheet
     .sheet-row
@@ -191,6 +186,8 @@
     flex: 4
 
   .flexrow
+    &.end
+      justify-content: flex-end
     &.justify-vertical
       align-items: center
 
@@ -248,6 +245,8 @@
     max-height: 2rem
     flex: 0.7
 
+  
+  // Ensur
   table
     &.standard-list
       width: 100%
@@ -269,12 +268,14 @@
       &.shrink
         width: 8%
         white-space: nowrap
+      &.min
+        width: 2%
+        white-space: nowrap
       &.buttons
         text-align: right
         &.lock-open
-          width: 20%
+          width: 15%
         &.lock
-          width: 1%
       &.expand
         width: auto
 
@@ -286,6 +287,8 @@
           margin-top: 5px
         &.shrink
           width: 9%
+        &.min
+          width: 3%
       
   img.icon
     margin-top: -0.2rem
