--- a/src/styles/MarginsAndPadding.sass
+++ b/src/styles/MarginsAndPadding.sass
@@ -131,6 +131,9 @@
 .mr-md 
   margin-right: var(--size-md)
 
+.mr-lg
+  margin-right: var(--size-lg)
+
 .ml-xs 
   margin-left: var(--size-xs)
 
